Bug 92112 - Fix the build with MinGW headers
Summary: Fix the build with MinGW headers
Status: RESOLVED FIXED
Alias: None
Product: cairomm
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Murray Cumming
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-25 11:23 UTC by Kalev Lember
Modified: 2016-12-09 12:32 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
[PATCH] Fix the build with MinGW headers (1.17 KB, text/plain)
2015-09-25 11:24 UTC, Kalev Lember
Details

Description Kalev Lember 2015-09-25 11:23:43 UTC
I'm getting the following error when building cairomm with MinGW:

cairomm/context.cc: In member function 'void Cairo::Context::rotate_degrees(double)':
cairomm/context.cc:223:40: error: 'M_PI' was not declared in this scope
   cairo_rotate(cobj(), angle_degrees * M_PI/180.0);
Comment 1 Kalev Lember 2015-09-25 11:24:57 UTC
Created attachment 118440 [details]
[PATCH] Fix the build with MinGW headers
Comment 2 Murray Cumming 2015-09-25 11:26:25 UTC
Feel free to push that if you have access. Thanks.
Comment 3 Kalev Lember 2015-09-25 11:31:30 UTC
Not sure how freedesktop permissions work, I think they might be per project. I'm getting:

$ git push
Counting objects: 4, done.
Delta compression using up to 4 threads.
Compressing objects: 100% (4/4), done.
Writing objects: 100% (4/4), 561 bytes | 0 bytes/s, done.
Total 4 (delta 3), reused 0 (delta 0)
error: insufficient permission for adding an object to repository database ./objects

fatal: failed to write object
error: unpack failed: unpack-objects abnormal exit
To ssh://git.freedesktop.org/git/cairomm
 ! [remote rejected] master -> master (n/a (unpacker error))
error: failed to push some refs to 'ssh://git.freedesktop.org/git/cairomm'


Can you push it yourself please? Thanks!
Comment 4 Murray Cumming 2016-12-09 12:32:28 UTC
I have pushed this to the master and cairomm-1-14 branches. Sorry for forgetting about it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.