Fix the build with MinGW headers

Guard _USE_MATH_DEFINES with _WIN32 instead of _MSC_VER as it is needed
for MinGW builds as well. While at this, also remove a duplicate version
of the exact same define a few lines below.

https://bugs.freedesktop.org/show_bug.cgi?id=92112